src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Annual_household_income__c</fullName>
        <description>Saver&apos;s annual household income</description>
        <label>Annual Household Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Name_1__c</fullName>
        <inlineHelpText>Beneficiary Name</inlineHelpText>
        <label>Beneficiary Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Relationship_1__c</fullName>
        <description>It will hold relationship with beneficiary 1</description>
        <label>Beneficiary Relationship 1</label>
        <picklist>
            <picklistValues>
                <fullName>Aunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boyfriend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex-Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex-Wife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girlfriend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granddaughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandfather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandmother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roommate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepdaughter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <description>Saver&apos;s Birthdate</description>
        <inlineHelpText>Saver&apos;s Birthdate</inlineHelpText>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cash_Other_Investments_Balance__c</fullName>
        <label>Cash Other Investments Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Checking_Account_Balance__c</fullName>
        <label>Checking Account Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Alameda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contra Costa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Mateo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Napa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santa Clara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Earn_user_ID__c</fullName>
        <label>EARN ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Saver&apos;s email address</description>
        <inlineHelpText>Saver Email Address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employment_Description__c</fullName>
        <label>Employment Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Employed full-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed part-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled or retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stay-at-home parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student who is not working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filing_Tax_Status__c</fullName>
        <description>filed_taxes_jointly_or_separately</description>
        <label>Filing Tax  Status</label>
        <picklist>
            <picklistValues>
                <fullName>My spouse and I filed a joint tax return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My spouse and I filed taxes separately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t have a spouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Household_Size__c</fullName>
        <label>Household Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadCreatedDate__c</fullName>
        <description>Date when the lead was created</description>
        <label>LeadCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live with Domestic Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legally Separated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_Account_Balance__c</fullName>
        <label>Retirement Account Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>SSN Last Four Digit</description>
        <inlineHelpText>Last Four Digit of Social Security Number</inlineHelpText>
        <label>SSN Last Four Digit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saver_hardships_or_concerns__c</fullName>
        <label>Description of Hardships</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Savings_Account_Balance__c</fullName>
        <label>Savings Account Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>State a Saver belong&apos;s to</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>application_signature__c</fullName>
        <inlineHelpText>Beneficiary Signature</inlineHelpText>
        <label>Application Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>educational_attainment__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>Completed graduate degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduated 2-year college</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>first_name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>middle_name__c</fullName>
        <inlineHelpText>Middle Name</inlineHelpText>
        <label>Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssn_aes__c</fullName>
        <label>Encrypted SSN</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
</CustomObject>